# native

./: .gitignore  CMakeLists.txt  DEPENDENCIES  Makefile  README.md  config.cmake.in
.github/workflows/: build.yml
cmake/: compiler.cmake  example.cmake  install.cmake  native.cmake  resource.rc.in
cmake/Native/: NativeConfig.cmake  NativeConfigVersion.cmake
cmake/resources/macos/: Info.plist
example/: CMakeLists.txt
example/cli/: CMakeLists.txt  cli.cc
example/hello_world/: CMakeLists.txt  Info.plist.in  hello_world.cc  index.html  style.css
src/application/: CMakeLists.txt  appkit.mm  delegate.h  delegate.mm
src/application/appkit/: CMakeLists.txt  app_appkit.mm  appkit.mm  delegate.h  delegate.mm
src/application/console/: CMakeLists.txt  app_console.cc
src/application/foundation/: CMakeLists.txt  app_foundation.mm
src/application/include/sourcemeta/native/: application.h  application_entry.h
src/application/win32/: CMakeLists.txt  app_win32.cc  delegate_win32.cc  delegate_win32.h
src/sysmod/args/: CMakeLists.txt
src/sysmod/args/foundation/: CMakeLists.txt  args_foundation.mm
src/sysmod/args/include/sourcemeta/native/: args.h
src/ui/: CMakeLists.txt
src/ui/webview/: CMakeLists.txt
src/ui/webview/appkit/: CMakeLists.txt  webview_appkit.mm
src/ui/webview/include/sourcemeta/native/: webview.h
src/ui/webview/win32/: CMakeLists.txt  packages.config  webview.props  webview_win32.cc
src/ui/window/: CMakeLists.txt
src/ui/window/appkit/: CMakeLists.txt  window_appkit.mm
src/ui/window/include/sourcemeta/native/: window.h  window_win32.h
src/ui/window/win32/: CMakeLists.txt  window_win32.cc
src/window/: CMakeLists.txt
src/window/appkit/: appkit.mm
src/window/include/sourcemeta/native/: window.h
